...
            <Ionicons 
              name={focused ? 'beer' : 'beer-outline'} 
              size={24} 
              color={color} 
            />
          ),
          tabBarButtonTestID: 'tab-bar-tavern',
        }}
      />
      <Tabs.Screen
        name="profiles"
        options={{
          title: 'Profiles',
...
            <Ionicons 
              name={focused ? 'people' : 'people-outline'} 
              size={24} 
              color={color} 
            />
          ),
          tabBarButtonTestID: 'tab-bar-profiles',
        }}
      />
      <Tabs.Screen
        name="messages"
        options={{
          title: 'Messages',
...
